[package]
name = "moq-upload"
description = "Media over QUIC - Upload API demo backend"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/moq-dev/moq"
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[[bin]]
name = "moq-upload"
path = "src/main.rs"
doc = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", features = ["tokio", "multipart"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
serde = { workspace = true }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

